--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MazaWeb</title>
     <link rel="stylesheet" href="/src/styles/style.css">
     <link href="https://fonts.cdnfonts.com/css/arcade-classic" rel="stylesheet">
   </head>
